@@ -171,3 +171,7 @@ Changes to retrieve CPU util on MacOS X.
 
 Dickon Reed
 Patches to attend to some windows in TCP_CRR and TCP_CC under Windows
+
+Bret McKee <bret@hp.com>
+Fixes to get netcpu_looper compiling and working after the "netcpu"
+split
